last commit before JIRA
