# server/routes/tools/newsletter_route.py
@@ -4,7 +4,7 @@ from typing import List, Literal
 from fastapi import APIRouter, Depends, HTTPException, Request
 from pydantic import BaseModel, Field
 from litellm import completion, ModelResponse, CustomStreamWrapper
-from server.database.client import create_file
+#from server.database.client import create_file
 from tools.scraping.list_urls import list_all_article_urls_from_json_instructions
 from tools.summarize import summarize_articles_from_urls_returns_sorted_by_rank
 from tools.scraping.scrapper import BSQueryExecutor, QueryModel
@@ -220,9 +220,6 @@ async def newsletter_route(request: Request, body: NewsLetterRequestString) :
         raise INTERNAL_SERVER_ERROR_HTTPEXCEPTION(str(e))
 
 
-@newsletter_router.get("/test", tags=["newsletter"])
-async def newsletter_route(request: Request) :
-    create_file()
 
 @newsletter_router.get("/create_newsletter", tags=["newsletter"])
 async def newsletter_route(request: Request) :
